[workspace]
resolver = "2"
members = [
    "shared",
    "market_data",
    "strategies",
    "risk",
    "oms",
    "execution",
    "monitoring",
    "security",
]

[workspace.dependencies]
zeromq = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
csv = "1.2"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
prometheus = "0.13"
axum = "0.7"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
rustls = "0.22"
rustls-pemfile = "2.0"
jsonwebtoken = "9.3"
chrono-tz = "0.9"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"
futures-util = "0.3"
ratatui = "0.26"
crossterm = "0.28"
url = "2.5"