[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "execution"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
zeromq = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }