[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "market_data"
path = "src/main.rs"

[lib]
name = "market_data"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
zeromq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }