[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
zeromq = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = "0.13"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
csv = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures-util = { workspace = true }