[package]
name = "oms"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oms"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
zeromq = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }