[package]
name = "risk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "risk"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
zeromq = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
tokio-util = { version = "0.7", features = ["codec", "time"] }