[package]
name = "security"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "security"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

